@@ -1,10 +1,12 @@
-m
-300 300 200
-y
+d
+0 0 50 200
+t
+150 150 0
+v
+t
+-150 -150 0
+x
 90
 t
-100 0 0
-v
-y
--20
+150 150 0
 v
